alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_4.snap
---
source: alpm-types/src/relation/base.rs
---
parse error at line 1, column 15
  |
1 | dep-name>=10: 
  |               ^
invalid optional dependency description
expected no carriage returns or newlines
